# django_model_cached_property

./: AUTHORS.md  AUTHORS.txt  LICENSE.md  README.md  requirements.txt  setup.cfg  setup.py
django_model_cached_property/: decorators.py
src/django_model_cached_property/: __init__.py  invalidate_model_cached_property.py  model_cached_property.py
