[metadata]
name = django_model_cached_property
version = 0.0.2
author = Evgenii Legotckoi
author_email = legotskoy@gmail.com
description = Django model cached property
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Legotckoi/django_model_cached_property/
project_urls =
    Bug Tracker = https://github.com/Legotckoi/django_model_cached_property/issues
    repository = https://github.com/Legotckoi/django_model_cached_property
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
